# wayfire

./: .gitmodules  Doxyfile  meson.build
.github/workflows/: ci.yaml  doxygen.yaml
metadata/: animate.xml  mag.xml  meson.build
plugins/: meson.build
plugins/animate/: animate.cpp  blinds.hpp  helix.hpp  shatter.hpp  spin.hpp  squeezimize.hpp  vortex.hpp  zap.hpp
plugins/animate/fire/: fire.cpp
plugins/blur/: blur.cpp
plugins/common/: preview-indication.hpp
plugins/ipc-rules/: ipc-input-methods.hpp
plugins/single_plugins/: background-view.cpp  center-view.cpp  fast-switcher.cpp  fisheye.cpp  kawase.cpp  keycolor.cpp  mag.cpp  meson.build  move.cpp  resize.cpp  showrepaint.cpp  switcher.cpp  viewport-impl.cpp  vswipe.cpp  zoom.cpp
plugins/tile/: tile-plugin.cpp
plugins/wobbly/: wobbly.cpp
proto/: meson.build  wayfire-shell.xml  wf-output-management-v1.xml
shell/: meson.build
shell/background/: background.cpp
shell/panel/: main.cpp  panel.cpp  panel.hpp
src/: core.cpp  main.cpp  meson.build  output.cpp  util.cpp
src/api/: option-wrapper.hpp  output.hpp  plugin.hpp  render-manager.hpp  view-transform.hpp
src/core/: core.cpp  output-layout.cpp  plugin.cpp  wm.cpp  wm.hpp
src/joysticks/: dup-joysticks.c  gp-glue.h  meson.build
src/output/: output.cpp  plugin-loader.cpp  render-manager.cpp  wayfire-shell.cpp  wayfire-shell.hpp  wf-output-config.cpp  wf-output-config.hpp  workspace-impl.cpp
src/view/: layer-shell.cpp  surface-impl.hpp  surface.cpp  view-impl.cpp  view.cpp  wlr-surface-node.cpp  xdg-shell.cpp  xdg-shell.hpp  xwayland.cpp
(+19 files in other folders)
